[project]
name = "dashboard-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fpdf2>=2.8.7",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-datareader>=0.10.0",
    "plotly>=6.7.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "yfinance>=1.4.1",
]
